[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
gio = "0.18.4"
glib = "0.18.4"
once_cell = "1.19.0"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
types = { version = "0.1.0", path = "../types" }
zbus = "3.14.1"
