[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
gio = "0.18.4"
glib = "0.18.4"
libflatpak = "0.4.0"
serde = "1.0.193"
types = { version = "0.1.0", path = "../types", features = ["libflatpak"] }
zbus = "3.14.1"
zvariant = "3.15.0"
